tests/integration/typecheck/fail/mismatch_convert_empty_record_to_dynamic_tail.ncl
# test.type = 'error'
# eval = 'typecheck'
# 
# [test.metadata]
# error = 'TypecheckError::MissingDynTail'
{} : { ; Dyn }